--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -47,7 +47,8 @@ $text-color: #121212 !default;
 /* =============================================================
 	Font
 ============================================================= */
-$font-family-base: "Pretendard", sans-serif !default;
+$font-family-base: "Cinzel", serif !default;
+$font-family-kr: "Noto Serif KR", serif !default;
 $font-weight: (
   regular: 400,
   bold: 700,
