--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,6 +1,6 @@
 @use "../abstracts/index" as *;
 
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Noto+Serif+KR:wght@200..900&display=swap");
 
 html,
 body,
