--- a/src/assets/scss/abstracts/_index.scss
+++ b/src/assets/scss/abstracts/_index.scss
@@ -1,5 +1,5 @@
-@forward "./a11y";
-@forward "./functions";
-@forward "./mixins";
-@forward "./responsive";
-@forward "./variables";
+@forward './a11y';
+@forward './functions';
+@forward './mixins';
+@forward './responsive';
+@forward './variables';
