--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -302,7 +302,7 @@
   blockquote:after,
   q:before,
   q:after {
-    content: "";
+    content: '';
     content: none;
   }
 
@@ -398,9 +398,9 @@
   * Correct the inability to style clickable types in iOS and Safari.
   */
   button,
-  [type="button"],
-  [type="reset"],
-  [type="submit"] {
+  [type='button'],
+  [type='reset'],
+  [type='submit'] {
     -webkit-appearance: button;
     vertical-align: middle;
     border: none;
@@ -413,9 +413,9 @@
   * Remove the inner border and padding in Firefox.
   */
   button::-moz-focus-inner,
-  [type="button"]::-moz-focus-inner,
-  [type="reset"]::-moz-focus-inner,
-  [type="submit"]::-moz-focus-inner {
+  [type='button']::-moz-focus-inner,
+  [type='reset']::-moz-focus-inner,
+  [type='submit']::-moz-focus-inner {
     border-style: none;
     padding: 0;
   }
@@ -470,8 +470,8 @@
   * 1. Add the correct box sizing in IE 10.
   * 2. Remove the padding in IE 10.
   */
-  [type="checkbox"],
-  [type="radio"] {
+  [type='checkbox'],
+  [type='radio'] {
     box-sizing: border-box; /* 1 */
     padding: 0; /* 2 */
   }
@@ -479,11 +479,11 @@
   /**
   * Remove the cursor style of increment and decrement buttons
   */
-  [type="number"] {
+  [type='number'] {
     -moz-appearance: textfield;
   }
-  [type="number"]::-webkit-inner-spin-button,
-  [type="number"]::-webkit-outer-spin-button {
+  [type='number']::-webkit-inner-spin-button,
+  [type='number']::-webkit-outer-spin-button {
     margin: 0;
     -webkit-appearance: none;
   }
@@ -491,7 +491,7 @@
   /**
   * Remove the search icon
   */
-  [type="search"] {
+  [type='search'] {
     &::-ms-clear,
     &::-ms-reveal {
       display: none;
@@ -507,7 +507,7 @@
   /**
   * Hide datepicker's arrow and prompt
   */
-  [type="date"] {
+  [type='date'] {
     &::-webkit-calendar-picker-indicater {
       display: none;
     }
