--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -20,8 +20,8 @@ $spacing-mobile: 16px;
 ============================================================= */
 // themes
 $colors: (
-  'white': #fff,
-  'black': #000,
+  "white": #fff,
+  "black": #000,
   gray900: #121212,
   gray800: #333333,
   gray700: #444444,
@@ -34,9 +34,9 @@ $colors: (
   gray100: #ebebeb,
   gray50: #f5f5f5,
 
-  'mint': #1ecad3,
-  'coral-pink': #f04d69,
-  'purple': #6f38e4,
+  "mint": #1ecad3,
+  "coral-pink": #f04d69,
+  "purple": #6f38e4,
 
   bg-gray: #f7f8f9,
 );
@@ -47,12 +47,12 @@ $text-color: #121212 !default;
 /* =============================================================
 	Font
 ============================================================= */
-$font-family-base: 'Cinzel', serif !default;
-$font-family-kr: 'Noto Serif KR', serif !default;
+$font-family-base: "Cinzel", serif !default;
+$font-family-kr: "Noto Serif KR", serif !default;
 $font-weight: (
   regular: 400,
   bold: 700,
-  'black': 900,
+  "black": 900,
 );
 $font-size: (
   head-l: 48px,
@@ -81,8 +81,8 @@ $line-height: 160% !default;
 	Path
 ============================================================= */
 // img path
-$url: '/online/';
-$img: $url + 'images/';
-$img-common: $img + 'common/';
-$img-icon: $img-common + 'icons/';
-$img-course: $img + 'course/';
+$url: "/online/";
+$img: $url + "images/";
+$img-common: $img + "common/";
+$img-icon: $img-common + "icons/";
+$img-course: $img + "course/";
