--- a/src/assets/scss/abstracts/_functions.scss
+++ b/src/assets/scss/abstracts/_functions.scss
@@ -1,8 +1,8 @@
-@use 'sass:map';
-@use 'sass:string';
-@use 'sass:list';
+@use "sass:map";
+@use "sass:string";
+@use "sass:list";
 
-@use './variables' as *;
+@use "./variables" as *;
 
 // 프로젝트 내 sass 버전에 따른 주의사항
 // 최상단에 @use "sass:map", "sass:string" 추가 후, map-get을 map.get으로 변경 (Dart Sass 3.0)
@@ -37,7 +37,7 @@
 }
 
 // 문자열 치환 함수
-@function str-replace($string, $search, $replace: '') {
+@function str-replace($string, $search, $replace: "") {
   $index: string.index($string, $search);
   @if $index {
     @return string.slice($string, 1, $index - 1) + $replace +
@@ -52,6 +52,6 @@
 
 // URL 인코딩 함수: # -> %23
 @function url-encode-color($color) {
-  $color-string: '#{$color}'; // color 타입을 문자열로 변환
-  @return str-replace($color-string, '#', '%23');
+  $color-string: "#{$color}"; // color 타입을 문자열로 변환
+  @return str-replace($color-string, "#", "%23");
 }
