--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,6 +1,6 @@
-@use '../abstracts/index' as *;
+@use "../abstracts/index" as *;
 
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Noto+Serif+KR:wght@200..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Noto+Serif+KR:wght@200..900&display=swap");
 
 html,
 body,
