--- a/src/assets/scss/layouts/_footer.scss
+++ b/src/assets/scss/layouts/_footer.scss
@@ -1,5 +1,5 @@
-@use '../abstracts/index' as *;
-@use '../components/icons' as i;
+@use "../abstracts/index" as *;
+@use "../components/icons" as i;
 
 #footer {
   height: 200px;
@@ -62,7 +62,7 @@
                   position: relative;
                   padding-left: 25px;
                   &::before {
-                    content: '';
+                    content: "";
                     position: absolute;
                     top: 50%;
                     left: 12px;
@@ -146,7 +146,7 @@
           max-height: 166px;
           padding: 12px;
           border: 1px solid color(gray900);
-          background: color('white');
+          background: color("white");
           overflow-y: auto;
           transition:
             height 0.3s ease,
