--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -1,10 +1,10 @@
-@use '../abstracts/index' as *;
+@use "../abstracts/index" as *;
 
 #header {
   @include flexbox(space-between);
   height: 90px;
   padding: 0 40px;
-  background: color('white');
+  background: color("white");
   @include mobile-tablet {
     height: 64px;
     padding: 0 16px;
